# mmreg

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  changelog.md  targets.txt
.github/workflows/: ci.yml  publish.yml
future/: memregs.rs  uiomem.rs
src/: devmem.rs  interface.rs  lib.rs  main.rs  memcheck.rs  memregs.rs  register.rs
